# agentic-ai

./: LICENSE  README.md  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py
3_crew/debate/: pyproject.toml
3_crew/debate2/: pyproject.toml
3_crew/debate2/output/: decide.md  oppose.md  propose.md
3_crew/debate2/src/debate2/: crew.py  main.py
3_crew/debate2/src/debate2/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher2/: pyproject.toml
3_crew/financial_researcher2/src/financial_researcher2/: crew.py  main.py
3_crew/financial_researcher2/src/financial_researcher2/config/: agents.yaml  tasks.yaml
3_crew/stock_picker2/: README.md  pyproject.toml
3_crew/stock_picker2/src/stock_picker2/: crew.py  main.py
3_crew/stock_picker2/src/stock_picker2/config/: agents.yaml  tasks.yaml
3_crew/stock_picker2/src/stock_picker2/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
5_autogen/: 3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb
5_strand/01-first-agent/: 01-first-agent.ipynb
5_strand/02-openai-model/: openai-litellm-agent.ipynb  resultsmetrics.json
5_strand/03-connecting-with-aws-services/: connecting-with-aws-services.ipynb  create_booking.py  (+2 more)
6_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  agent.py
6_mcp/: 2_lab2.ipynb  3_lab3.ipynb
7_mcp/: 1_lab1.ipynb  4_lab4.ipynb  5_lab5.ipynb
guides/: 03_git_and_github.ipynb  05_notebooks.ipynb  07_vibe_coding_and_debugging.ipynb  08_debugging.ipynb  09_ai_apis_and_ollama.ipynb  12_starting_your_project.ipynb
setup/: SETUP-PC.md  SETUP-WSL.md  SETUP-linux.md  SETUP-mac.md  diagnostics.py  troubleshooting.ipynb
(+19 files in other folders)
