[project]
name = "financial_researcher2"
version = "0.1.0"
description = "financial_researcher2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
financial_researcher2 = "financial_researcher2.main:run"
run_crew = "financial_researcher2.main:run"
train = "financial_researcher2.main:train"
replay = "financial_researcher2.main:replay"
test = "financial_researcher2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
