[project]
name = "stock_picker2"
version = "0.1.0"
description = "stock_picker2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
stock_picker2 = "stock_picker2.main:run"
run_crew = "stock_picker2.main:run"
train = "stock_picker2.main:train"
replay = "stock_picker2.main:replay"
test = "stock_picker2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
